
  Synchronize packaging with Ubuntu:

  * debian/control: Drop transitional libcupsys2-gnutls10 package, it was only
    required for Sarge->Etch upgrades.
  * debian/control: Change netbase dependency to update-inetd, since that
    lives in its own package now.
  * debian/local/enable_sharing: Also match on 127.0.0.1 IP adresses in
    addition to 'localhost'.

 -- Martin Pitt <mpitt@debian.org>  Mon, 30 Apr 2007 14:21:08 +0200

cupsys (1.2.7-4) unstable; urgency=high

  [ Kenshi Muto ]
  * Use dh_usrlocal to install files in /usr/local in the
    maintainer scripts, instead of shipping them in the deb.
    This was policy violation (closes: #409335)

 -- Kenshi Muto <kmuto@debian.org>  Fri,  2 Feb 2007 18:16:24 +0900

cupsys (1.2.7-3) unstable; urgency=high

  [ Kenshi Muto ]
  * removed STR2137 patch. This patch corruted some
    Postscript files. (closes: #403703) This was a release 
    critical bug.
  * Provides /usr/local/share/ppd and /opt/share/ppd
    to satisfy LSB 3.2. (closes: #408154)
  * Applied upstream patch:
    - STR2198: The scheduler still loaded the remote printer cache,
      even when browsing was disabled
  * Debconf translation
    - Portuguese (closes: #408332)
    - Norwegian (closes: #406253)

 -- Kenshi Muto <kmuto@debian.org>  Thu,  1 Feb 2007 10:17:30 +0000

cupsys (1.2.7-2) unstable; urgency=high

  [ Kenshi Muto ]
  * Applied upstream patches to fix some (include RC) bugs as dpatch style:
    - STR2106: Raw PBM files did not print correctly
    - STR2111: The PostScript filter did not properly output
      document setup commands for reversed output (closes: Bug#403703)
    - STR2117: The scheduler did not parse IPv6 netmask properly
    - STR2121: cupsDoAuthentication() did not translate the password
      prompt
    - STR2123: The backends incorrectly used STATUS:
      media-tray-empty-error messages for out-of-paper conditions
    - STR2133: httpGetLength2() did not handle error messages without
      content correctly